force-app/main/default/objects/ARF_Payment__c/ARF_Payment__c.object-meta.xml
<CustomObject>
    <description>Payment records synced from ERP</description>
    <label>AR Payment</label>
    <nameField>
        <displayFormat>ARF-{0000}</displayFormat>
        <label>AR Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>