force-app/main/default/objects/ARF_Payment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that made the payment</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AR_Payments</relationshipLabel>
    <relationshipName>AR_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>