force-app/main/default/objects/ARF_Payment__c/fields/Autopay_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Autopay_Schedule__c</fullName>
    <description>Autopay schedule that generated this payment</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autopay Schedule</label>
    <referenceTo>ARF_Autopay_Schedule__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>