force-app/main/default/objects/ARF_Payment__c/fields/Gateway_Reference__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Reference__c</fullName>
    <description>Gateway transaction reference ID</description>
    <label>Gateway Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>