force-app/main/default/objects/ARF_Payment__c/fields/Gateway_Token__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Token__c</fullName>
    <description>Gateway transaction token</description>
    <label>Gateway Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>