force-app/main/default/objects/ARF_Payment__c/fields/Has_Short_Pay__c.field-meta.xml
<CustomField>
    <fullName>Has_Short_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Payment was less than invoice total</description>
    <label>Has Short Pay</label>
    <type>Checkbox</type>
</CustomField>