force-app/main/default/objects/ARF_Payment__c/fields/Is_Portal_Payment__c.field-meta.xml
<CustomField>
    <fullName>Is_Portal_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this payment originated from the customer payment portal</description>
    <label>Portal Payment</label>
    <type>Checkbox</type>
</CustomField>