force-app/main/default/objects/ARF_Payment__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>How payment was made</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Check</fullName><default>false</default><label>Check</label></value>
                <value><fullName>ACH</fullName><default>false</default><label>ACH</label></value>
                <value><fullName>Wire</fullName><default>false</default><label>Wire</label></value>
                <value><fullName>Credit Card</fullName><default>false</default><label>Credit Card</label></value>
                <value><fullName>Cash</fullName><default>false</default><label>Cash</label></value>
                <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>