force-app/main/default/objects/ARF_Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Date payment was received</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>