force-app/main/default/objects/ARF_Payment__c/fields/Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Portal_User__c</fullName>
    <description>Portal user who initiated this payment</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Portal_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>