force-app/main/default/objects/ARF_Payment__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Check number, wire reference, etc.</description>
    <label>Payment Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>