force-app/main/default/objects/ARF_Payment__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>ERP or bank system source</description>
    <label>Source System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>