force-app/main/default/objects/ARF_Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Payment processing status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Received</fullName><default>false</default><label>Received</label></value>
                <value><fullName>Applied</fullName><default>false</default><label>Applied</label></value>
                <value><fullName>Partially Applied</fullName><default>false</default><label>Partially Applied</label></value>
                <value><fullName>Reversed</fullName><default>false</default><label>Reversed</label></value>
                <value><fullName>Void</fullName><default>false</default><label>Void</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>